# cranefrick

./: .clippy.toml  .debtmap.toml  .gitignore  .rustfmt.toml  .rusty-hook.toml  Cargo.toml  DEBTMAP_ANALYSIS_COMMAND  HEADER  LLVM_FLAGS  OBJDUMP_COMMAND  build.rs  flags.toml  llvm_flags.txt  out.txt  rust-toolchain.toml  talpo.toml
.cargo/: config.toml
bigbrain/module/: Cargo.toml
bigbrain/module/src/: data_context.rs  lib.rs  serde_impl.rs  traps.rs
bigbrain/regalloc/: Cargo.toml
bigbrain/regalloc/src/: cfg.rs  domtree.rs  index.rs  lib.rs  postorder.rs  registers.rs  ssa.rs
bigbrain/regalloc/src/fastalloc/: iter.rs  lru.rs  mod.rs
cranium/bitset/: Cargo.toml
cranium/bitset/src/: compound.rs  lib.rs  scalar.rs
cranium/entity/: Cargo.toml
cranium/entity/src/: boxed_slice.rs  entity_iter.rs  iter.rs  keys.rs  lib.rs  packed_option.rs  primary.rs  set.rs  sparse.rs
cranium/entity/src/ints/: mod.rs  signed.rs  unsigned.rs
cranium/entity/src/map/: mod.rs  serde.rs
crates/assembler/: Cargo.toml  cbindgen.toml
crates/assembler/src/: error.rs  ext.rs  internal.rs  lib.rs
crates/assembler/src/assembler/: mod.rs  srclocs.rs
crates/assembler/src/assembler/impls/: cell.rs  io.rs  loops.rs  mem.rs  mod.rs  ptr.rs  shifts.rs  value.rs
crates/assembler/src/flags/: mod.rs  serde_with.rs
crates/assembler/src/inner/: instr.rs  metadata.rs  mod.rs
crates/assembler/src/inner/impls/: cell.rs  intrinsics.rs  loops.rs  mem.rs  metadata.rs  mod.rs  pointer.rs  value.rs
crates/assembler/src/inner/utils/: debug_info.rs  functions.rs  load.rs  mod.rs  pointers.rs  sealed.rs  type_cast.rs
crates/assembler/src/module/: memory.rs  mod.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: lib.rs  mir.rs
crates/cranelift_assembler/: Cargo.toml
crates/cranelift_assembler/src/: lib.rs  module.rs
crates/cranelift_assembler/src/assembler/: mod.rs  srclocs.rs
crates/cranelift_assembler/src/assembler/impls/: cell.rs  mem.rs  ptr.rs  value.rs
crates/cranelift_assembler/src/flags/: mod.rs  serde_with.rs
crates/cranelift_assembler/src/inner/: mod.rs  srcloc.rs
crates/cranelift_assembler/src/inner/impls/: cell.rs  io.rs  loops.rs  mem.rs  mod.rs  pointer.rs  ptr.rs  range.rs  value.rs
crates/hir/: Cargo.toml
crates/hir/src/: inner.rs  lib.rs
crates/instructions/: Cargo.toml
crates/instructions/src/: helpers.rs  lib.rs
crates/ir/: Cargo.toml
crates/ir/benches/: basic.rs  parse.rs
crates/ir/src/: dupe.rs  lib.rs  move_options.rs  output.rs  parse.rs  sub.rs
crates/ir/src/compiler/: mod.rs  parse.rs
crates/ir/src/compiler/opt/: change.rs  mod.rs  utils.rs
crates/ir/src/move_options/: mod.rs
crates/ir/src/ops/: mod.rs  set_many_cells.rs  set_range.rs
crates/ir/src/options/: mod.rs  scan.rs  set_many_cells.rs  set_range.rs  sub.rs
crates/ir/src/options/change/: mod.rs  sealed.rs  serde.rs
crates/ir/src/options/many/: change.rs  mod.rs  set.rs
crates/llvm_assembler/: Cargo.toml
crates/llvm_assembler/src/: ext.rs  lib.rs  module.rs
crates/llvm_assembler/src/inner/: mod.rs
crates/llvm_assembler/src/inner/impls/: cell.rs  io.rs  loops.rs  mem.rs  mod.rs  pointer.rs  ptr.rs  range.rs  value.rs
crates/llvm_assembler/src/inner/utils/: debug_info.rs  functions.rs  mod.rs  offset.rs  pointers.rs
crates/llvm_assembler/src/module/: memory.rs  mod.rs
crates/mlir/: Cargo.toml
crates/mlir/src/: lib.rs
crates/mlir/src/compiler/: mod.rs
crates/mlir/src/compiler/opt/: change.rs  mod.rs  passes.rs  utils.rs
crates/mlir/src/dfg/: mod.rs
crates/new_optimizer/: Cargo.toml
crates/new_optimizer/src/: lib.rs
crates/new_optimizer/src/inner/: change.rs  mod.rs
crates/old_optimizer/: Cargo.toml
crates/old_optimizer/src/: lib.rs
crates/old_optimizer/src/inner/: utils.rs
crates/old_optimizer/src/inner/passes/: long.rs  loops.rs  mem.rs  mod.rs
crates/operations/: Cargo.toml
crates/operations/src/: cell_offset_options.rs  lib.rs  main.rs  parse.rs
crates/optimizer/: Cargo.toml
crates/optimizer/src/: error.rs  lib.rs
crates/optimizer/src/impls/: change.rs  utils.rs
crates/optimizer/src/impls/passes/: loops.rs  mod.rs  sort.rs
crates/optimizer/src/inner/: change.rs  mod.rs  utils.rs
crates/optimizer/src/inner/passes/: io.rs  long.rs  loops.rs  mem.rs  misc.rs  mod.rs  sort.rs  writes.rs
crates/optimizer/src/instrs/: error.rs  mod.rs  verify.rs
crates/optimizer/src/ops/: mod.rs
crates/playground/: Cargo.toml
crates/playground/src/: main.rs
crates/rust_assembler/: Cargo.toml
crates/rust_assembler/src/: lib.rs
crates/rust_assembler/src/module/: mod.rs
crates/utils/: Cargo.toml
crates/utils/src/: contains_range.rs  get_or_zero.rs  insert_or_push.rs  lib.rs  ptr.rs  runtime_array.rs  shortname.rs  slice.rs  tracing_indicatif_ext.rs
crates/utils/src/convert/: get_or_zero.rs  into_range.rs  mod.rs  unwrap_from.rs
crates/utils/src/iter/: mod.rs
crates/utils/src/slice/: mod.rs  windows_n.rs
egraph/concurrency/: Cargo.toml
egraph/concurrency/benches/: simple_read.rs
egraph/concurrency/src/: bitset.rs  concurrent_vec.rs  lib.rs  notif.rs  par_writer.rs  resettable_oncelock.rs
egraph/union_find/: Cargo.toml
egraph/union_find/src/: lib.rs
playground/befunge_test/: Cargo.toml
playground/befunge_test/programs/: bottles.bf
playground/befunge_test/src/: cfg.rs  jit.rs  lib.rs  main.rs  utils.rs
playground/chumsky_test/: Cargo.toml
playground/chumsky_test/src/: lib.rs  main.rs
playground/cranelift_test/: Cargo.toml
playground/hugr_test/: Cargo.toml
playground/hugr_test/src/: ext.rs  main.rs
playground/indicatif_test/: Cargo.toml
playground/indicatif_test/src/: main.rs
playground/llvm_test/: Cargo.toml
playground/llvm_test/src/: compiler.rs  main.rs
playground/lua_test/: Cargo.toml
playground/lua_test/programs/: arithmetic.lua  execute.lua
playground/lua_test/src/: main.rs
playground/math_test/: Cargo.toml
playground/math_test/src/: error.rs  lib.rs
playground/math_test/src/autodiff/: convenience.rs  mod.rs
playground/math_test/src/final_tagless/: mod.rs  polynomial.rs
(+199 files in other folders)
