[package]
edition.workspace = true
license.workspace = true
name = "frick"
rust-version.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true, features = ["capture-spantrace"] }
dhat = { workspace = true, optional = true }
frick_assembler = { path = "crates/assembler" }
frick_ir = { workspace = true, features = ["parse"] }
frick_optimizer = { path = "crates/optimizer" }
indicatif = "0.18"
ron = "0.11"
serde.workspace = true
toml = { version = "0.9", features = ["serde"] }
tracing.workspace = true
tracing-error = "0.2.1"
tracing-indicatif.workspace = true
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "tracing-log"
] }

[target.'cfg(target_os = "windows")'.dependencies]
mimalloc = "0.1"

[build-dependencies]
build-rs = "0.3"

[features]
heap_profiling = ["dep:dhat"]

[dev-dependencies]
criterion.workspace = true
rand = "0.9"

[[bench]]
harness = false
name = "is_all_same"

[workspace]
members = [
    "crates/assembler",
    "crates/interop",
    "crates/ir",
    "crates/optimizer",
    "crates/spec",
    "crates/utils",
    "tools/pattern_finder"
]
resolver = "3"

[workspace.dependencies]
anyhow = "1"
arbitrary = "1"
chumsky = { version = "0.11", default-features = false }
clap = "4"
color-eyre = "0.6"
criterion = "0.7"
dhat = "0.3"
frick_interop = { path = "crates/interop" }
frick_ir = { path = "crates/ir" }
frick_utils = { path = "crates/utils" }
inkwell = { git = "https://github.com/TheDan64/inkwell.git", rev = "075db5c0f535c500f9e801313e570206ab28f613", features = [
    "llvm20-1-force-dynamic"
] }
libc = "0.2"
serde = { version = "1", default-features = false }
target-lexicon = "0.13"
tracing = "0.1"
tracing-indicatif = "0.3"
tracing-subscriber = "0.3"

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"

[workspace.lints.clippy]
borrow_as_ptr = "deny"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_ptr_alignment = "allow"
cast_sign_loss = "allow"
cognitive_complexity = "allow"
disallowed_methods = "deny"
expl_impl_clone_on_copy = "allow"
float_cmp = "allow"
fn_params_excessive_bools = "allow"
inline_always = "allow"
large_stack_arrays = "allow"
literal_string_with_formatting_args = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
module_name_repetitions = "allow"
needless_for_each = "allow"
needless_pass_by_value = "allow"
nursery = { level = "warn", priority = -1 }
option_if_let_else = "allow"
pedantic = { level = "warn", priority = -1 }
range_plus_one = "allow"
redundant_pub_crate = "allow"
redundant_type_annotations = "warn"
result_large_err = "allow"
significant_drop_tightening = "allow"
similar_names = "allow"
str_to_string = "deny"
struct_excessive_bools = "allow"
style = { level = "warn", priority = -1 }
todo = "warn"
try_err = "warn"
tuple_array_conversions = "allow"
undocumented_unsafe_blocks = "allow"
unimplemented = "allow"
unnecessary_min_or_max = "allow"
unnecessary_wraps = "allow"
unsafe_derive_deserialize = "allow"
used_underscore_binding = "allow"
useless_conversion = "allow"
useless_nonzero_new_unchecked = "allow"

[workspace.package]
edition = "2024"
license = "MIT or Apache-2.0"
rust-version = "1.90"
version = "0.1.0"

[profile.release]
codegen-units = 1
lto = "fat"

[workspace.metadata.docs.rs]
all-features = true

[profile.dev]
opt-level = 1

[profile.dev.package.inkwell]
opt-level = 3
debug-assertions = false

[profile.dev.package.frick_optimizer]
opt-level = 3

[profile.dev.package.frick_interop]
opt-level = 3

[patch.crates-io]
llvm-sys = { git = "https://gitlab.com/taricorp/llvm-sys.rs.git", branch = "llvm-20" }
