[package]
edition.workspace = true
license.workspace = true
name = "frick"
rust-version.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true, features = ["capture-spantrace"] }
dhat = { workspace = true, optional = true }
frick_assembler = { path = "crates/assembler" }
frick_instructions.workspace = true
frick_operations = { workspace = true, features = ["parse"] }
frick_optimizer = { path = "crates/optimizer" }
tracing.workspace = true
tracing-error = "0.2.1"
tracing-indicatif.workspace = true
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "tracing-log"
] }

[target.'cfg(target_os = "windows")'.dependencies]
mimalloc = "0.1"

[dev-dependencies]
criterion.workspace = true
rand = "0.9"
rusty-hook = "0.11"

[features]
heap_profiling = ["dep:dhat"]

[[bench]]
harness = false
name = "is_all_same"

[[bench]]
harness = false
name = "is_all_zero"

[workspace]
members = [
    "crates/assembler",
    "crates/instructions",
    "crates/interop",
    "crates/ir",
    "crates/old_optimizer",
    "crates/operations",
    "crates/optimizer",
    "crates/serialize",
    "crates/spec",
    "crates/types",
    "crates/utils",
    "tools/pattern_finder"
]
resolver = "3"

[workspace.dependencies]
arbitrary = "1"
ariadne = "0.6"
chumsky = { version = "0.11", default-features = false }
clap = "4"
color-eyre = "0.6"
criterion = "0.8"
dhat = "0.3"
frick_instructions = { path = "crates/instructions" }
frick_interop = { path = "crates/interop" }
frick_ir = { path = "crates/ir" }
frick_operations = { path = "crates/operations" }
frick_serialize = { path = "crates/serialize" }
frick_spec = { path = "crates/spec" }
frick_types = { path = "crates/types" }
frick_utils = { path = "crates/utils" }
inkwell = { git = "https://github.com/TheDan64/inkwell.git", rev = "ae49132d89fb4ae1054d7023520cd7ffc4d1ae66", features = [
    "llvm21-1"
] }
libc = "0.2"
ron = "0.12"
send_wrapper = "0.6"
serde = { version = "1", default-features = false }
tracing = "0.1"
tracing-indicatif = "0.3"
tracing-subscriber = "0.3"
walkdir = "2"

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"

[workspace.lints.clippy]
borrow_as_ptr = "deny"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_ptr_alignment = "allow"
cast_sign_loss = "allow"
cognitive_complexity = "allow"
disallowed_methods = "deny"
expl_impl_clone_on_copy = "allow"
float_cmp = "allow"
fn_params_excessive_bools = "allow"
inline_always = "allow"
large_stack_arrays = "allow"
literal_string_with_formatting_args = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
module_name_repetitions = "allow"
needless_for_each = "allow"
needless_pass_by_value = "allow"
nursery = { level = "warn", priority = -1 }
option_if_let_else = "allow"
pedantic = { level = "warn", priority = -1 }
range_plus_one = "allow"
redundant_pub_crate = "allow"
redundant_type_annotations = "warn"
result_large_err = "allow"
significant_drop_tightening = "allow"
similar_names = "allow"
str_to_string = "deny"
struct_excessive_bools = "allow"
style = { level = "warn", priority = -1 }
todo = "warn"
try_err = "warn"
tuple_array_conversions = "allow"
undocumented_unsafe_blocks = "allow"
unimplemented = "allow"
unnecessary_min_or_max = "allow"
unnecessary_wraps = "allow"
unsafe_derive_deserialize = "allow"
used_underscore_binding = "allow"
useless_conversion = "allow"
useless_nonzero_new_unchecked = "allow"

[workspace.package]
edition = "2024"
license = "MIT or Apache-2.0"
rust-version = "1.90"
version = "0.1.0"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[workspace.metadata.docs.rs]
all-features = true

[profile.dev]
opt-level = 1
panic = "abort"

[profile.dev.package.inkwell]
debug-assertions = false
opt-level = 3

[profile.dev.package.frick_optimizer]
opt-level = 3

[profile.dev.package.frick_interop]
opt-level = 3

[patch.crates-io]
llvm-sys = { git = "https://gitlab.com/taricorp/llvm-sys.rs.git", branch = "llvm-21" }
