lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "bigbrain_module"
rust-version.workspace = true
version.workspace = true

[dependencies]
cranelift-codegen.workspace = true
cranelift-control.workspace = true
hashbrown = { version = "0.15" }
serde = { workspace = true, default-features = false, features = ["derive"] }
