lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "bigbrain_regalloc"
rust-version.workspace = true
version.workspace = true

[dependencies]
hashbrown = { version = "0.15", default-features = false }
rustc-hash = { version = "2", default-features = false }
serde = { workspace = true, default-features = false, features = [
    "alloc",
    "derive"
] }
tracing = { workspace = true, optional = true }
serde_repr = "0.1"

[features]
checker = []
default = ["std"]
std = []
tracing = ["dep:tracing"]
