lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "cranium_bitset"
rust-version.workspace = true
version.workspace = true

[dependencies]
arbitrary = { version = "1", optional = true }
cranefrick_utils = { workspace = true, features = ["convert"] }
serde = { workspace = true, default-features = false, features = ["derive"] }

[features]
alloc = ["serde/alloc"]
arbitrary = ["dep:arbitrary"]
default = ["alloc"]
