lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "frick_assembler"
rust-version.workspace = true
version.workspace = true

[dependencies]
frick_interop.workspace = true
frick_ir.workspace = true
frick_spec = { path = "../spec" }
frick_utils = { workspace = true, features = ["convert", "get_or_zero"] }
inkwell.workspace = true
libc.workspace = true
send_wrapper.workspace = true
tracing.workspace = true
