lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "frick_assembler"
rust-version.workspace = true
version.workspace = true

[dependencies]
frick_instructions.workspace = true
frick_interop.workspace = true
frick_operations.workspace = true
frick_spec = { path = "../spec" }
frick_types.workspace = true
frick_utils = { workspace = true, features = [
    "convert",
    "get_or_zero",
    "insert_or_push",
    "slice_ext"
] }
inkwell.workspace = true
libc.workspace = true
line-numbers = "0.4"
send_wrapper.workspace = true
tracing.workspace = true
