lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "frick_assembler"
rust-version.workspace = true
version.workspace = true

[dependencies]
frick_instructions.workspace = true
frick_interop.workspace = true
frick_llvm_ext = { path = "../llvm_ext" }
frick_spec = { path = "../spec" }
frick_types.workspace = true
frick_utils = { workspace = true, features = [
    "alloc",
    "tracing_indicatif_ext"
] }
inkwell.workspace = true
libc.workspace = true
line-numbers = "0.4"
rustc-hash.workspace = true
tracing.workspace = true
