lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "cranefrick_compiler"
rust-version.workspace = true
version.workspace = true

[dependencies]
cranefrick_hir = { path = "../hir" }
serde = { workspace = true, default-features = false, features = [
    "alloc",
    "derive"
] }
