lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "frick_cranelift_assembler"
rust-version.workspace = true
version.workspace = true

[dependencies]
bitflags = "2"
cranelift-codegen = { workspace = true, features = [
    "host-arch",
    "isle-errors",
    "unwind"
] }
cranelift-frontend.workspace = true
cranelift-jit = { workspace = true, features = ["wasmtime-unwinder"] }
cranelift-module.workspace = true
cranelift-native.workspace = true
frick_assembler.workspace = true
frick_ir.workspace = true
serde = { workspace = true, features = ["derive", "std"] }
target-lexicon = "0.13"
tracing.workspace = true
tracing-indicatif.workspace = true
