lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "frick_instructions"
rust-version.workspace = true
version.workspace = true

[dependencies]
frick_operations.workspace = true
frick_types.workspace = true
frick_utils = { workspace = true, features = ["convert"] }
serde = { workspace = true, default-features = false, features = [
    "alloc",
    "derive"
] }
