lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "cranefrick_ir"
rust-version.workspace = true
version.workspace = true

[dependencies]
ariadne = "0.5"
chumsky = { workspace = true, default-features = false, features = [
    "stacker",
    "std"
] }
cranefrick_ast.workspace = true
cranefrick_utils = { workspace = true, features = [
    "alloc",
    "insert_or_push",
    "iter"
] }
serde = { workspace = true, default-features = false, features = [
    "alloc",
    "derive"
] }
tracing = { workspace = true, features = ["attributes"] }

[dev-dependencies]
criterion = "0.7"

[[bench]]
harness = false
name = "basic"
