lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "frick_ir"
rust-version.workspace = true
version.workspace = true

[dependencies]
ariadne = { version = "0.5", optional = true }
chumsky = { workspace = true, default-features = false, features = [
    "stacker",
    "std"
], optional = true }
frick_utils = { workspace = true, features = [
    "alloc",
    "get_or_zero",
    "insert_or_push",
    "iter"
] }
serde = { workspace = true, default-features = false, features = [
    "alloc",
    "derive"
] }
tracing = { workspace = true, features = ["attributes"] }

[dev-dependencies]
criterion.workspace = true

[features]
parse = ["dep:ariadne", "dep:chumsky", "std"]
std = []

[[bench]]
harness = false
name = "parse"
