lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "frick_llvm_assembler"
rust-version.workspace = true
version.workspace = true

[dependencies]
frick_assembler.workspace = true
frick_ir.workspace = true
inkwell = { workspace = true, features = ["llvm18-1"] }
libc.workspace = true
tracing.workspace = true
