lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "frick_llvm_assembler"
rust-version.workspace = true
version.workspace = true

[dependencies]
byteorder = "1"
frick_assembler.workspace = true
frick_ir.workspace = true
frick_utils = { workspace = true, features = ["get_or_zero"] }
inkwell.workspace = true
tracing.workspace = true
