lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "frick_llvm_assembler"
rust-version.workspace = true
version.workspace = true

[dependencies]
frick_assembler.workspace = true
frick_interop = { path = "../interop" }
frick_ir.workspace = true
frick_utils = { workspace = true, features = ["get_or_zero"] }
inkwell.workspace = true
libc = "0.2"
send_wrapper = "0.6"
tracing.workspace = true
