lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "cranefrick_mlir"
rust-version.workspace = true
version.workspace = true

[dependencies]
cranefrick_hlir = { path = "../hlir" }
cranefrick_utils = { workspace = true, features = ["insert_or_push"] }
serde = { workspace = true, default-features = false, features = [
    "alloc",
    "derive"
] }
tracing.workspace = true
itertools = "0.14"
