lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "cranefrick_mlir"
rust-version.workspace = true
version.workspace = true

[dependencies]
cranefrick_hlir = { path = "../hlir" }
cranefrick_utils = { workspace = true, features = ["insert_or_push"] }
itertools = "0.14"
serde = { workspace = true, default-features = false, features = [
    "alloc",
    "derive"
] }
tracing = { workspace = true, features = ["attributes"] }
