lints.workspace = true

[package]
default-run = "cranefrick_playground"
edition.workspace = true
license.workspace = true
name = "cranefrick_playground"
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.98"
cranelift = { version = "0.122" }
target-lexicon = "0.13"
