lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "cranefrick_playground"
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.98"
cranelift = { version = "0.122" }
egg = "0.10"
indicatif = "0.18"
ordered-float = "3.0.0"
target-lexicon = "0.13"
tracing.workspace = true
tracing-indicatif = "0.3"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rayon = "1"
env_logger = "0.11"
petgraph = "0.8.2"
