lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "frick_rust_assembler"
rust-version.workspace = true
version.workspace = true

[dependencies]
frick_assembler.workspace = true
frick_ir.workspace = true
frick_utils = { workspace = true, features = ["get_or_zero"] }
tracing.workspace = true
