dependencies.tracing-indicatif = { workspace = true, optional = true }
lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "frick_utils"
rust-version.workspace = true
version.workspace = true

[features]
alloc = []
contains_range = []
convert = []
get_or_zero = []
insert_or_push = ["alloc"]
into_range = []
runtime_array = []
iter_ext = []
slice_ext = []
tracing_indicatif_ext = ["dep:tracing-indicatif"]
