dependencies.tracing-indicatif = { workspace = true, optional = true }
lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "frick_utils"
rust-version.workspace = true
version.workspace = true

[features]
alloc = []
tracing_indicatif_ext = ["dep:tracing-indicatif"]
nightly = []
