lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "cranefrick_egraph_concurrency"
rust-version.workspace = true
version.workspace = true

[dependencies]
arc-swap = "1"

[dev-dependencies]
divan = "0.1"
rayon = "1.10"

[[bench]]
harness = false
name = "simple_read"
