lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "befunge_test"
rust-version.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
cranelift.workspace = true
cranelift-codegen.workspace = true
cranelift-jit.workspace = true
cranelift-module.workspace = true
cranelift-native.workspace = true
fxhash = "0.2"
rand = "0.9"
target-lexicon = "0.13"

[features]
debug = []
