lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "chumsky_test"
rust-version.workspace = true
version.workspace = true

[dependencies]
ariadne = "0.5"
chumsky = "0.10"
clap = { workspace = true, features = ["derive"] }
cranefrick_ir.workspace = true
logos.workspace = true

[features]
debug = ["logos/debug"]
