lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "cranelift_test"
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
cranelift = { git = "https://github.com/bytecodealliance/wasmtime.git", rev = "0a074afce9fff4fe82e45069e1e493e7f13d33ba" }
target-lexicon = "0.13"
