lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "hugr_test"
rust-version.workspace = true
version.workspace = true

[dependencies]
color-eyre.workspace = true
hugr = { version = "0.22.2", features = [] }
hugr-core = { version = "0.22.2" }
hugr-model = "0.22.2"
