lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "indicatif_test"
rust-version.workspace = true
version.workspace = true

[dependencies]
futures = "0.3.31"
rand = { version = "0.9.1", features = ["std_rng"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing.workspace = true
tracing-indicatif = "0.3"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
