lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "llvm_test"
rust-version.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
inkwell = { version = "0.6", features = ["llvm18-1"] }
