lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "lua_test"
rust-version.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true, features = ["cargo"] }
color-eyre.workspace = true
piccolo = { git = "https://github.com/kyren/piccolo.git" }
