lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "math_test"
rust-version.workspace = true
version.workspace = true

[dependencies]
ad_trait = "0.1"
cranelift-codegen.workspace = true
cranelift-frontend.workspace = true
cranelift-jit.workspace = true
cranelift-module.workspace = true
egglog = "0.5"
num-traits = "0.2"
